frontend/src/k8s-manifests/local/k8s-deploy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: my-project
  labels:
    app.kubernetes.io/name: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        kubernetes.io/change-cause: "Update to demo artifact version 2.0.0 test"
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
      - name: frontend
        image: localhost:32000/frontend
        ports:
        - containerPort: 9091
          protocol: TCP
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
