frontend/src/k8s-manifests/local/k8s-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: my-project
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9091"
    prometheus.io/path: "/actuator/prometheus"
  labels:
    app.kubernetes.io/name: frontend
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
    name: http
  selector:
    app.kubernetes.io/name: frontend
