frontend/src/k8s-manifests/local/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: my-project
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  rules:
  - host: frontend.10.152.183.83.nip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 9091
